springboot/springboot-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-demo
  name: java-demo
spec:
  # externalIPs:
  # - 172.28.128.10
  # - 172.28.128.11
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    # nodePort: 30018
  selector:
    app: java-demo
  # type: NodePort
