springboot/springboot-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: java-demo
spec:
  rules:
  - host: yunlang.com
    http:
      paths:
      - path: /
        backend:
          serviceName: java-demo
          servicePort: 80
